--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.
 
+# ekki geyma "style.css" sem við
+# þýðum frá "styles.scss"
+style.css
