--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Stora verkefni 1",
+  "name": "stora_verkefni_1",
   "version": "0.6.0",
   "description": "Stora verkefni 1 í vefforritun 2017",
   "main": "index.js",
